[package]
name = "tunnel"
version = "3.1.0"
edition = "2021"

[[bin]]
name = "tunnel"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
futures-util = "0.3"

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# TLS
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
webpki-roots = "0.26"

# Crypto / auth
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

# Error handling
anyhow = "1"

# Socket tuning
socket2 = { version = "0.5", features = ["all"] }

# TUN mode: HTTP-клиент для загрузки tun2socks/wintun
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }

# TUN mode: распаковка ZIP
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
